# global_unrest

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  docker-compose.yml
.claude/skills/run/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/global-signal-desktop/: Cargo.toml
apps/global-signal-desktop/src/: app.rs  ingest.rs  main.rs  map_view.rs  panels.rs
apps/global-signal-desktop/tests/: gdelt_online.rs  pipeline.rs
crates/analytics/: Cargo.toml
crates/analytics/benches/: scoring.rs
crates/analytics/src/: baseline.rs  lib.rs  scoring.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs
crates/geo-utils/: Cargo.toml
crates/geo-utils/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: basemap.rs  heatmap.rs  lib.rs  markers.rs
crates/source-acled/: Cargo.toml
crates/source-acled/src/: iso3.rs  lib.rs  live.rs
crates/source-acled/tests/: live_mock.rs
crates/source-fixtures/: Cargo.toml
crates/source-fixtures/src/: lib.rs
crates/source-gdelt/: Cargo.toml
crates/source-gdelt/src/: country.rs  doc.rs  events.rs  lib.rs  sched.rs
crates/source-gdelt/tests/: doc_golden.rs  events_golden.rs
crates/source-gdelt/tests/data/: doc_artlist_sample.json  events_sample.export.CSV
crates/source-noaa/: Cargo.toml
crates/source-noaa/src/: lib.rs  live.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_scores.sql
crates/storage/src/: lib.rs  settings.rs
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT.md  PLAN.md  ROADMAP.md  SAFETY_AND_PRIVACY.md  SCORING.md  VISUALIZATION.md
fixtures/: acled_sample.json  gdelt_sample.json  regions_sample.geojson
services/api/: Cargo.toml  Dockerfile
services/api/src/: main.rs
services/workers/: Cargo.toml  Dockerfile
services/workers/src/: main.rs
