[workspace]
resolver = "3"
members = [
    "apps/global-signal-desktop",
    "crates/analytics",
    "crates/core-types",
    "crates/geo-utils",
    "crates/renderer",
    "crates/source-acled",
    "crates/source-fixtures",
    "crates/source-gdelt",
    "crates/source-noaa",
    "crates/storage",
    "services/api",
    "services/workers",
]

[workspace.package]
# Version is milestone-tied (0.<milestone>.0), not SemVer — see
# CHANGELOG.md and docs/ROADMAP.md's M6 version-bump policy.
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.96"
# None of these crates/binaries are meant for crates.io — internal-only
# workspace members. Also lets cargo-deny's allow-wildcard-paths treat our
# unversioned path deps as intentional rather than a publish hazard.
publish = false

[workspace.dependencies]
# Internal crates
analytics = { path = "crates/analytics" }
core-types = { path = "crates/core-types" }
geo-utils = { path = "crates/geo-utils" }
renderer = { path = "crates/renderer" }
source-acled = { path = "crates/source-acled" }
source-fixtures = { path = "crates/source-fixtures" }
source-gdelt = { path = "crates/source-gdelt" }
source-noaa = { path = "crates/source-noaa" }
storage = { path = "crates/storage" }

# External crates — pinned at the workspace level; do not re-declare versions
# in member crates. eframe 0.35 rides wgpu 29; do not bump wgpu independently.
anyhow = "1"
# M4 services/api only.
axum = "0.8"
chrono = { version = "0.4.45", features = ["serde"] }
criterion = "0.8"
directories = "6"
duckdb = { version = "1.10504.0", features = ["bundled"] }
earcutr = "0.5"
eframe = "0.35"
egui = "0.35"
# Selects `zip`'s DEFLATE backend: flate2's default rust_backend (miniz_oxide,
# pure Rust). `zip`'s deflate-flate2 feature pulls flate2 but not a backend.
flate2 = "1"
geo = "0.33"
geojson = "1.0"
governor = "0.10"
h3o = "0.10"
# GDELT live ingestion (M3). rustls (not native-tls) so CI stays OpenSSL-free
# on both Windows and Linux; no default TLS/http2 pulled in.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
# GDELT Events dumps are single-entry DEFLATE zips; pure-Rust miniz_oxide
# backend keeps CI OpenSSL/zlib-free. No aes/bzip2/lzma/zstd.
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
# "net" gives the current-thread runtime its IO driver (reqwest needs it for
# the live GDELT ingest loop); "rt" only, no multi-thread.
tokio = { version = "1.52", features = ["rt", "macros", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Optimize dependencies even in dev builds: epaint tessellation and geo math
# stay smooth while the workspace crates keep fast incremental compiles.
[profile.dev.package."*"]
opt-level = 2
