[package]
name = "global-signal-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
analytics.workspace = true
anyhow.workspace = true
chrono.workspace = true
core-types.workspace = true
directories.workspace = true
eframe.workspace = true
egui.workspace = true
geo-utils.workspace = true
renderer.workspace = true
serde_json.workspace = true
source-fixtures.workspace = true
storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
