[package]
name = "global-signal-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

# ACLED live ingestion (M5): off by default — the network path and its deps
# compile out entirely. Requires ACLED_EMAIL/ACLED_PASSWORD env vars at run
# time (docs/SAFETY_AND_PRIVACY.md: authorized, attributed, not redistributed).
[features]
acled-live = ["dep:source-acled", "source-acled/live"]
# NOAA/NWS active alerts (M5 optional layer): keyless, US coverage.
noaa-live = ["dep:source-noaa", "source-noaa/live"]

[dependencies]
analytics.workspace = true
anyhow.workspace = true
chrono.workspace = true
core-types.workspace = true
directories.workspace = true
eframe.workspace = true
egui.workspace = true
geo-utils.workspace = true
renderer.workspace = true
serde.workspace = true
serde_json.workspace = true
source-acled = { workspace = true, optional = true }
source-fixtures.workspace = true
source-gdelt.workspace = true
source-noaa = { workspace = true, optional = true }
storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
