[package]
name = "analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
core-types.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "scoring"
harness = false

[lints]
workspace = true
