[package]
name = "source-acled"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# M5 crate. ACLED access requires registered authorization; the live path is
# feature-gated and compiles out by default. Key comes from ACLED_API_KEY.

[features]
default = []
live = []

[dependencies]
core-types.workspace = true
thiserror.workspace = true

[lints]
workspace = true
