[package]
name = "source-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
core-types.workspace = true
geo-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"

[lints]
workspace = true
