[package]
name = "source-gdelt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# M3 crate. Live GDELT ingestion: the DOC 2.0 JSON API (this file's `doc`
# module) and, next, the 15-minute Events CSV-zip dumps. reqwest rides the
# workspace rustls pin; the ingest worker supplies the tokio runtime.

[dependencies]
core-types.workspace = true
geo-utils.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
