[package]
name = "source-noaa"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# M5 crate. NOAA/NWS active weather alerts (api.weather.gov) — keyless US-gov
# public-domain data; the API asks only for a descriptive User-Agent. The live
# path is feature-gated like source-acled; parsing/normalization stay pure and
# offline-testable.

[features]
default = []
live = ["dep:reqwest"]

[dependencies]
core-types.workspace = true
geo-utils.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }

[lints]
workspace = true
