[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# M4 crate. The axum read API over published Parquet partitions lands here
# after the desktop pipeline is proven. Stub until then.

[dependencies]

[lints]
workspace = true
