[package]
name = "workers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# M4 crate. Scheduled ingest worker that owns the ingest DuckDB and publishes
# immutable date-partitioned Parquet (the cross-process handoff surface).

[dependencies]

[lints]
workspace = true
