[package]
name = "workers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# M4: scheduled ingest worker. Owns its own DuckDB (never shared with the
# desktop or services/api) and publishes immutable date-partitioned Parquet
# snapshots — the cross-process handoff surface (docs/API.md).

# ACLED live ingestion (M5): off by default. Snapshots produced with this
# feature contain ACLED-derived rows — local/authorized use only, never
# publicly redistributed (docs/SAFETY_AND_PRIVACY.md).
[features]
acled-live = ["dep:source-acled", "source-acled/live"]
# NOAA/NWS active alerts (M5 optional layer): keyless, US coverage.
noaa-live = ["dep:source-noaa", "source-noaa/live"]

[dependencies]
source-acled = { workspace = true, optional = true }
source-noaa = { workspace = true, optional = true }
anyhow.workspace = true
chrono.workspace = true
core-types.workspace = true
directories.workspace = true
source-fixtures.workspace = true
source-gdelt.workspace = true
storage.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
